Agregando rochas lisas

--- a/index.html
+++ b/index.html
@@ -404,22 +404,76 @@
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="./Picture/LISA/1.jpg" class="d-block w-100 rounded pt-2" alt="...">
+                  <img src="./Picture/LISA/8.jpg" class="d-block w-100 rounded pt-2" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="./Picture/LISA/2.jpg" class="d-block w-100 rounded pt-2" alt="...">
+                  <img src="./Picture/LISA/9.jpg" class="d-block w-100 rounded pt-2" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="./Picture/LISA/3.jpg" class="d-block w-100 rounded pt-2" alt="...">
+                  <img src="./Picture/LISA/10.jpg" class="d-block w-100 rounded pt-2" alt="...">
                 </div>
               </div>
             </div>
             <div class="card-body">
               <h5 class="card-title">ROCHAS LISA</h5>
               <p class="card-text">ARTICULO : 8108</p>
-              <a href="./LISAS/8108.html" class="btn btn-success">VER EN GRANDE</a>
+              <a href="./LISA/8108.html" class="btn btn-success">VER EN GRANDE</a>
             </div>
           </div>
+          <div class="card m-3" style="width: 18rem;">
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="./Picture/LISA/1.jpg" class="d-block w-100 rounded pt-2" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="./Picture/LISA/2.jpg" class="d-block w-100 rounded pt-2" alt="...">
+                </div>
+              </div>
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">ROCHAS LISA NEGRA</h5>
+              <p class="card-text">ARTICULO : 8010</p>
+              <a href="./LISA/8010.html" class="btn btn-success">VER EN GRANDE</a>
+            </div>
+          </div>
+          <div class="card m-3" style="width: 18rem;">
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="./Picture/LISA/3.jpg" class="d-block w-100 rounded pt-2" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="./Picture/LISA/4.jpg" class="d-block w-100 rounded pt-2" alt="...">
+                </div>
+            </div>
+          </div>
+            <div class="card-body">
+              <h5 class="card-title">ROCHAS LISA AZUL</h5>
+              <p class="card-text">ARTICULO : 8011</p>
+              <a href="./LISA/8011.html" class="btn btn-success">VER EN GRANDE</a>
+            </div>
+          </div>
+          <div class="card m-3" style="width: 18rem;">
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="./Picture/LISA/5.jpg" class="d-block w-100 rounded pt-2" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="./Picture/LISA/6.jpg" class="d-block w-100 rounded pt-2" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="./Picture/LISA/7.jpg" class="d-block w-100 rounded pt-2" alt="...">
+                </div>
+              </div>
+            <div class="card-body">
+              <h5 class="card-title">ROCHAS LISA ROSA FILL A FILL</h5>
+              <p class="card-text">ARTICULO : 8012</p>
+              <a href="./LISA/8012.html" class="btn btn-success">VER EN GRANDE</a>
+            </div>
+          </div>
+        </div>
         </div>  
         <div class="store-title">
           <h1 id="dior">CAMISAS CHRISTIAN DIOR</h1>
