--- a/LISA/8011.html
+++ b/LISA/8011.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>(8108)-ROCHAS Lisa</title>
+    <title>(8011)-ROCHAS LISA AZUL</title>
     <link rel = "stylesheet" href = "../Css/style2.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -22,19 +22,18 @@
     <div class = "main-wrapper">
         <div class = "container">
             <div class = "product-div">
-                <span class = "product-name">(8108)-ROCHAS Lisa</span>
+                <span class = "product-name">(8011)-ROCHAS LISA AZUL</span>
                 <div class = "product-div-left">
                     <div class = "img-container">
                         <div class="wrapper">
                             <div class="block">
-                                <img src="../Picture/LISA/1.jpg"alt="Image To Zoom" class="block__pic" data-title="(8108)-ROCHAS Lisa" data-help="" alt = "watch">
+                                <img src="../Picture/LISA/3.jpg"alt="Image To Zoom" class="block__pic" data-title="(8011)-ROCHAS LISA AZUL" data-help="" alt = "watch">
                             </div>
                         </div>
                     </div>
                     <div class = "hover-container">
-                        <div><img src = "../Picture/LISA/1.jpg"></div>
-                        <div><img src = "../Picture/LISA/2.jpg"></div>
                         <div><img src = "../Picture/LISA/3.jpg"></div>
+                        <div><img src = "../Picture/LISA/4.jpg"></div>
                     </div>
                 </div>
                 <div class = "product-div-right">
